# make_link_shortyy

./: .gitignore  Cargo.toml  README.md  USAGE.md  docker-compose.yaml
.sqlx/: query-aa7cc4b4e10b49feafa127ee11b1555847c44aba49a0818f506bc069a825e3c5.json  query-c321d505a9f8b53196961de6faa69165222811c67eeccb5743ce826360bb6271.json
migrations/: 20260131085748_create_links_table.sql
src/: crud.rs  main.rs  routes.rs  utils.rs
