[package]
name = "decrease_me_there"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
axum-prometheus = "0.9.0"
dotenvy = "0.15.7"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
